syntax = "proto3";

package taskmanager;
option csharp_namespace = "Centurion.Contracts.TaskManager";
option go_package = "github.com/CenturionLabs/centurion/checkout-service/contracts/taskmanager";
option java_package = "gg.centurion.taskmanager";

import "google/protobuf/timestamp.proto";
import "module.proto";

message PresetData {
  string id = 1;
  google.protobuf.Timestamp created_at = 2;
  google.protobuf.Timestamp updated_at = 3;
  Module module = 4;
  string product_sku = 5;
  string product_title = 6;
  string product_picture = 7;
  bytes config = 8;
  google.protobuf.Timestamp expected_at = 9;
}

message PresetsRequest {
  google.protobuf.Timestamp start_at = 1;
  google.protobuf.Timestamp end_at = 2;
}

message PresetList {
  repeated PresetData presets = 1;
}

service Presets {
  rpc GetList(PresetsRequest) returns (PresetList);
}
